[project]
name = "fitgpu"
version = "0.1.1"
description = "Check if a HuggingFace model fits in your GPU"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub",
    "pynvml",
]

[project.scripts]
fitgpu = "fitgpu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
